<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000">

        <TextView
            android:id="@+id/editClientTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_client_edit"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clientNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_owner"
            android:layout_weight="1"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:ems="10"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_date"
            android:layout_weight="1"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="date">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_address"
            android:layout_weight="1"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/client_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:ems="10"
            android:inputType="text|textPostalAddress">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clientNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_job_number"
            android:layout_weight="1"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/client_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/client_update"
            android:onClick="editClient"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/removeButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/new_client_remove"
            android:onClick="removeClient"
            android:layout_weight="1"/>

    </TableRow>

</TableLayout>